Force pages refresh

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
     "Segoe UI", sans-serif;
-  background: radial-gradient(circle at top left, #ffffff 0, #364ebb 55%);
+  background: radial-gradient(circle at top left, #ffffff 0, #9396a4 55%);
   color: var(--text);
 }
 
@@ -43,7 +43,7 @@ body {
 
 .sidebar {
   border-right: 1px solid var(--border-subtle);
-  background: linear-gradient(180deg, #223690 0, #020617 40%, #1e37a4 100%);
+  background: linear-gradient(180deg, #223690 0, #3b4b92 40%, #1e37a4 100%);
   padding: 1.5rem 1.25rem;
   display: flex;
   flex-direction: column;
